20100610  * [dj] - Added winbind to samba script.
            [dj] - Renamed openldap1 to slapd
            [dj] - Chaned provides for ntpd script to ntpd
            [dj] - Fixed dependencies
            [dj] - Fixed runlevels in httpd script

20100428  * [dj] - Added netfs script.
          * [dj] - Added random script.
          * [dj] - Corrected deps on all scripts and cleand up comments.

20080907  * [dj] - Initial commit (partial). 